subiendo el repo

--- a/src/pages/controles/controles.scss
+++ b/src/pages/controles/controles.scss
@@ -1,3 +1,8 @@
 page-controles {
-
+    .background-controles{
+        background-color:#F8F6F6!important;
+    }
+    h1{
+        color: #4E3188;
+    }
 }
