--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -29,7 +29,8 @@ $colors: (
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222,
-  ifeep:        #45C3CB
+  ifeep:        #45C3CB,
+  morado:       #2A014B
 );
 
 
